alignment issue fixed

--- a/style.css
+++ b/style.css
@@ -94,11 +94,11 @@ p {
 }
 @media (min-width: 360px) {
   .heading {
-    margin-left: 20%;
+    margin-left: 15%;
     font-size: 3.3rem;
   }
   .para {
-    margin-left: 20%;
+    margin-left: 15%;
     font-size: 1.8rem;
   }
   .header-logo {
@@ -114,7 +114,7 @@ p {
     width: 248px;
   }
   .buttons {
-    margin-left: 35px;
+    margin-left: 10%;
   }
 }
 @media (min-width: 768px) {
@@ -135,6 +135,7 @@ p {
   .buttons {
     display: flex;
     flex-direction: row;
+    margin-left: 5%;
   }
   .header-logo {
     margin-left: 9%;
